# Solar_Drone_System

./: .gitignore  CMakeLists.txt  README.md  package.xml  settings copy.json
src/lib/: log.py  mission_test.py  myDrone.py  ros.py  settings.py
src/ros_nodes/GUI_node/: bootstrap.py  general_main.py  main.py
src/ros_nodes/Strategy/: bootstrap.py  main.py  mavros_offboard_attctl_test.py
src/ros_nodes/camera_adapter_node/: bootstrap.py  main.py
src/ros_nodes/camera_reader_node/: bootstrap.py  main.py
src/ros_nodes/frames_saving_node/: bootstrap.py  main.py
src/ros_nodes/testingClass/: bootstrap.py  main.py
