<?xml version="1.0"?>
<package format="2">
  <name>Solar_Drone_System</name>
  <version>1.0.0</version>
  <description>Autonomous drone system with camera streaming, mission planning, and remote control capabilities</description>

  <maintainer email="meco@todo.todo">meco</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/your-username/Solar_Drone_System</url>
  <url type="bugtracker">https://github.com/your-username/Solar_Drone_System/issues</url>
  <url type="repository">https://github.com/your-username/Solar_Drone_System</url>

  <author email="meco@todo.todo">meco</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Core ROS dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <!-- Computer vision dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  
  <!-- MAVLink/MAVROS dependencies -->
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  
  <!-- Python dependencies -->
  <build_depend>python3-opencv</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-tk</build_depend>
  <build_depend>python3-paramiko</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-paramiko</exec_depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
